--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 body {
     background-image: url(../img/saw-9.webp);
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
     text-align: center;
     font-size: 65px;
     color: rgb(189, 2, 2);
+}
+
+h4 {
+    color: rgb(189, 2, 2);
+
 }
 
 .box {
@@ -19,11 +25,27 @@ h1 {
     align-items: center;
 }
 
+.box-player {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-pc {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+}
+
 #btn {
-    padding: 50px 50px;
+    padding: 40px 40px;
     border-radius: 50%;
     background-color: rgb(189, 2, 2);
-    font-size: 30px;
+    font-size: 20px;
 }
 
 #player {
